# Counterparty-Exposure-CVA-Collateral-Engine

./: .gitignore  README.md  pyproject.toml
configs/: base_case.json  sofr_multi_curve_case.json  sofr_snapshot_case.json
notebooks/: counterparty_exposure_cva_math_demo.ipynb
src/cva_engine/: __init__.py  analytics.py  cli.py  collateral.py  config.py  credit.py  curve_loader.py  curves.py  exposure.py  hull_white.py  market.py  simulation.py  trades.py
tests/: test_core.py  test_curve_loader.py
